Arreglos en la forma de mostrar datos

--- a/app/views/passwordsMain.scala.html
+++ b/app/views/passwordsMain.scala.html
@@ -1,7 +1,7 @@
 @(profile: String, isLog: Boolean)
 @main("Agenda de Contraseñas HAL 9000",isLog,profile){
 
-      <script type="text/javascript" src="@routes.Assets.versioned("javascripts/getPass.js")"></script>
+
 <br> <br>  <br> 
   <div class="row column text-center" >
     <h1>Bienvenido a tu Agenda de Contraseñas HAL 9000</h1>
@@ -18,19 +18,17 @@
   </div></center>
         <div id="divBuscarPass" name="divBuscarPass" >
           <br>
-        <form method="get" action="@routes.Application.getBusqueda()">
           <div class="row">
             <div class="small-3 columns">
                <label for="middle-label" class="text-right middle">Ingrese la plataforma</label>
            </div>
           <div class="small-6 columns">
-            <input type="text" id="middle-label" placeholder="plataforma" id="plataforma" name="plataforma">
+            <input type="text"  placeholder="plataforma" id="plataformaBusc" name="plataformaBusc" value="">
           </div>
           <div class="small-3 columns">
-            <button type="submit" class="button expanded" id="botonBusc" name="botonBusc">Buscar</button>
+            <button  class="button expanded" id="botonBusc" name="botonBusc" onClick="busqueda()">Buscar</button>
           </div>
         </div>
-      </form>
         <div class="small-12 columns" id="respuestaPassword" name="respuestaPassword" style=" padding-top: 30px;">
            <center> <table style="text-align: center;">
               <thead>
@@ -79,4 +77,5 @@
             document.getElementById("agregarPass").style.visibility="visible";
         };
   </script>
+ <script type="text/javascript" src="@routes.Assets.versioned("javascripts/getPass.js")"></script>
 }
