Arreglos en la capa de negocio, limpieza de codigo y ajustes de alertas

--- a/app/views/passwordsMain.scala.html
+++ b/app/views/passwordsMain.scala.html
@@ -1,8 +1,13 @@
-@(profile: String, isLog: Boolean)
+@(profile: String, isLog: Boolean, exist: Boolean)
 @main("Agenda de Contraseñas HAL 9000",isLog,profile){
 
 
 <br> <br>  <br> 
+  @if(exist==true){
+      <script type="text/javascript">
+        alert("La plataforma ya existe, intente con una Nueva");
+      </script>
+  }
   <div class="row column text-center" >
     <h1>Bienvenido a tu Agenda de Contraseñas HAL 9000</h1>
     <p class="lead">Eliga una opción a realizar por favor.</p>
