Se agrego validacion en el formulario de agregar password

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,6 +22,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
         <script type="text/javascript" src="https://intercom.zurb.com/scripts/zcom.js"></script>
+        <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+        <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
         
     </head>
     <body>
