--- a/app/views/passwordsMain.scala.html
+++ b/app/views/passwordsMain.scala.html
@@ -52,7 +52,7 @@
       </div> 
       <center>
       <div id="agregarPass" name="agregarPass">
-        <form method="post" action="@routes.Application.postPassword()">
+        <form method="post" action="@routes.Application.postPassword()" id="formAgregarPass" name="formAgregarPass">
       <div class="row column log-in-form" style="border: 1px solid #cacaca; padding: 1rem; border-radius: 3px;">
         <h4 class="text-center">Crear Contraseña</h4>
         <label>plataforma
@@ -64,7 +64,7 @@
          <label>password
           <input type="text" placeholder="password" name="password">
         </label>
-        <button type="submit" class="button expanded" value="Login">Agregar</button>
+        <button type="submit" class="button expanded" value="Login" id="agregar" name="agregar">Agregar</button>
       </div>
     </form>
       </div></center>
